* Drop Prototype selector engine and add support for NWMatcher, Sizzle, Slick, and Sly selector engines. [jddalton]
  Note: Backwards compatibility warning.

* Ensure Fuse.Util.$A converts primatives into objects when used with the `in` operator. [Justin Perkins, kangax]

* Cleanup and optimize element traversal methods. [jddalton]
  Note: Backwards compatibility warning.
   - Removed methods: immediateDescendants, getElementsBySelector, recursivelyCollect
   - Renamed method: select -> query
   - Optimized Element#sibilings() method by reducing the number of function calls it makes

* Correct nodeListSlice() handling of an undefined endIndex. [jddalton]

* Move Enumerable methods to it's prototype. [jddalton]

* Make Fuse natives inherit from Fuse object. [jddalton]

* Cleanup Fuse.Fusebox() and add support for Native generics. [jddalton]

* Move all JSON methods to json.js. [jddalton]

* Cleanup object.js and array.js and add `toList` alias for `toArray` methods. [jddalton]

* Namespace natives Fuse.Date, Fuse.Function, Fuse.List, Fuse.Number, Fuse.RegExp and Fuse.String. [jddalton]
  Note: Backwards compatibility warning.
   - Moved abstract.js, deprecated.js, try.js to the Prototype emulator folder
   - Moved Fuse.Browser object definition to broswer.js
   - Renamed Ajax.PeriodicalUpdater to Ajax.TimedUpdate
   - Cleaned-up private utility methods
   - Ensure consistent use of named functions
   - Implemented inheritable namespaces

   - Change Fuse.Class()
     * Removed Class.create() in favor of Fuse.Class(superclass/methods [, methods, ...])
     * Allow passing a `constructor` method to Fuse.Class to use as the klass()
     * Make the initialize() method optional and don't create it by default

   - Added methods:
     Fuse.addNS(path, superclass/methods [, methods, ...]): Add namespaces to the Fuse object
     Fuse.Fusebox(): Return an object containing sandboxed natives
